Fix some rendering bugs on IE8, fix fancy chrome vis
Also reorganize some NanoUI files

--- a/nano/styles/_chrome.less
+++ b/nano/styles/_chrome.less
@@ -1,19 +1,5 @@
 @import "_config";
-
-@import "_document";
 @import "_util";
-
-@import "_interface";
-@import "_link";
-@import "_bar";
-
-@import "_generic";
-@import "_nanotrasen";
-
-
-.fancy {
-  display: none;
-}
 
 
 div.loading {
@@ -88,4 +74,8 @@ div.resize {
     border-color: transparent transparent @resize transparent;
 
     transform: rotate(360deg);
+}
+
+.fancy {
+    .hidden;
 }
