--- a/nano/styles/_document.less
+++ b/nano/styles/_document.less
@@ -3,13 +3,16 @@
 
 
 html {
-  min-height: 100%;
+    min-height: 100%;
 
 	cursor: default; // Reset the cursor.
 }
 
 body {
     min-height: 100%;
+    height: 100%;
+
+    background-color: @background-end; // Fallback for old browsers.
 
     font-family: @font;
     font-size: @fontsize;
